# home-assistant-discord-conversation

./: .gitignore  .gitlab-ci.yml  .tool-versions  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  dagger.json  hacs.json  mise.toml  pyproject.toml
.dagger/: go.mod  main.go  version.go
.dagger/versioning/: versioning.go  versioning_test.go
.github/workflows/: release.yaml  validate.yaml
custom_components/discord_conversation/: __init__.py  bot.py  config_flow.py  const.py  conversation_cache.py  conversation_router.py  discord_api.py  manifest.json  strings.json  text_utils.py
docs/superpowers/plans/: 2026-06-26-discord-conversation.md
docs/superpowers/specs/: 2026-06-26-discord-conversation-design.md
hooks/: commit-msg  pre-commit
tests/: conftest.py  test_bot.py  test_config_flow.py  test_conversation_cache.py  test_discord_api.py  test_init.py  test_options_flow.py  test_router.py  test_scaffolding.py  test_text_utils.py  test_translations.py
