[project]
name = "discord-conversation"
version = "0.2.0"
description = "Home Assistant custom integration: Assist conversation over a Discord bot"
requires-python = ">=3.14.2"

[dependency-groups]
dev = [
    "discord.py==2.7.1",
    "hassil>=3.8.1",
    "home-assistant-intents>=2026.6.24",
    "homeassistant==2026.6.3",
    "pytest",
    "pytest-homeassistant-custom-component==0.13.339",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
